[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-frame"
version = "0.4.0"
authors = [
  { name="Morgiver", email="me@morgiver.net" },
]
description = "A package to manage programmatically frames of trading data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.urls]
"Homepage" = "https://github.com/Morgiver/trading-frame"
"Bug Tracker" = "https://github.com/Morgiver/trading-frame/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
